# snakeshot

./: .flake8  .gitignore  .pre-commit-config.yaml  init.ps1  pyproject.toml  setup  sonar-project.properties
.github/workflows/: deploy.yaml  destroy.yaml
snakeshot/: html.py  index.html  main.py  response.py  template.html  test.html
snakeshot/data/: player.py
snakeshot/model/: Tour.py  match.py  odds.py  player.py  round.py  slam.py  tour.py  tournament.py
snakeshot/model/slams/: wimbledon.py
snakeshot/sources/: draws.py  odds.py  tour.py
snakeshot/templates/: bootstrap.html  index.html  macros.html  tables.html  tables_dict.html  template.html
snakeshot/tournament/: match.py  player.py  round.py
snakeshot/utils/: printer.py  session.py
terraform/: api.tf  backend.tf  lambda.tf  locals.tf  providers.tf  variables.tf
tests/: test_python_lambda_template.py  test_snakeshot.py
tests/fixtures/sources/odds/: mens-wimbledon.htm
tests/model/: test_model.py  test_player.py
tests/resources/atp/: sources.txt  table.html
tests/resources/uso/: MS.json  draws.json  sources.txt
tests/resources/wimbledon/: LS.json  MS.json  draws.json  sources.tcxt
tests/resources/wta/: _ranked.json  ranked.json  sources.txt
tests/test_model/: test_match.py  test_model.py  test_player.py  test_round.py  test_slam.py  test_tournament.py
tests/test_sources/: test_odds.py  test_tour.py
tests/test_sources/odds/: womens-wimbledon.htm
