[tool.poetry]
name = "python-lambda-template"
version = "0.1.0"
description = ""
authors = ["trackness <40263851+trackness@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b1"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.0"
coverage = "^5.5"
flake8 = "^3.9.2"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
