[tool.poetry]
name = "snakeshot"
version = "0.1.0"
description = ""
authors = ["trackness <40263851+trackness@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
cloudscraper = "^1.2.58"
pre-commit = "^2.13.0"
setuptools = "^57.1.0"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b1"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.0"
coverage = "^5.5"
flake8 = "^3.9.2"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
