[tool.poetry]
name = "snakeshot"
version = "0.1.0"
description = ""
authors = ["trackness <40263851+trackness@users.noreply.github.com>"]
include = ["snakeshot/template.html"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
loguru = "^0.5.3"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b1"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.0"
coverage = "^5.5"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
responses = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
